Update HelloDataTypesLong.java